<resources>
    <string name="app_name">assignment3</string>
    <string name="nav_title">Memory Game</string>
    <string name="drawer_name">David Florez</string>
    <string name="drawer_code">8820815</string>
    <string name="drawer_link_welcome">Welcome</string>
    <string name="drawer_link_game">Game</string>
    <string name="drawer_link_high_score">High Score</string>
    <string name="welcome_title">Welcome to Memory Game!</string>
    <string name="welcome_instructions_1">1. Memorize the highlighted colored tiles</string>
    <string name="welcome_instructions_2">2. Tap them when they turn white within 5 seconds</string>
    <string name="welcome_instructions_3">3. Earn a point for each successful round</string>
    <string name="welcome_instructions_4">4. Be careful! Choosing the wrong tiles resets your score</string>
    <string name="welcome_instructions_5">5. Red tiles signal a brief mistake before turning white</string>
    <string name="welcome_instructions_6">6. Aim for the highest score!</string>
    <string name="welcome_hint">Enter your name</string>
    <string name="button_text">Start Game</string>
    <string name="game_title">Memory Game</string>
    <string name="game_label_player">Player: </string>
    <string name="game_empty_player_name">Player name not set</string>
    <string name="game_label_score">Score: </string>
    <string name="game_label_round">Round: </string>
    <string name="game_label_squares">Squares: </string>
    <string name="high_scores_title">Top 3 High Scores</string>
    <string name="zero">0</string>
    <string name="game_countdown_time">5</string>

</resources>